Arreglo de endpoints
